# cbbm

./: .gitattributes  README.rst  bank_data.csv  banks_db.accdb  output.txt  pyproject.toml
cbbm/: .gitattributes  .gitignore  README.md  benchmarks.py  cluster_analysis.ipynb  clustering.ipynb  comentarios.txt  correlations_analysis.ipynb  data_mining_banks.py  feature_selection.py  kpi_creator.ipynb  kpi_creator_gh.ipynb  kpi_creator_group.ipynb  loan_seg.ipynb  optimum_k.ipynb  predict_outliers.ipynb  test.ipynb  test_kpis.ipynb  transform_functions.py  visualizations.py
cbbm/data/: IPC.txt  auxiliar_tramos.xlsx  dbo_Men_EvolDatos.txt  dbo_Men_EvolResul.txt  dbo_Men_IntDocPers.txt  dbo_Men_TraPres.txt  df_loan_seg_avg_wv.csv  gh_8.csv  kpi copy.json  kpi.json  kpis.csv  list_banks.csv  not_predicted.csv  sh_ipc_09_22.xls  tra_pres.csv  tra_pres.xlsx  vigentes.csv
cbbm/db/: AGRUP EVOLUCION DE DATOS.xlsx  AGRUP FLUJOS.xlsx  agrup_cuentas.xlsx  gh.accdb
cbbm/output/: KMeans-10-MaxAbs Scaler-Isolation Forest.csv  KMeans-10-Normalizer-One-Class SVM (SGD).csv  KMeans-10-Normalizer-One-Class SVM.csv  KMeans-10-Normalizer-Robust Covariance.csv  KMeans-10-Robust Scaler-One-Class SVM.csv  KMeans-2-MaxAbs Scaler-Local Outlier Factor.csv  KMeans-2-MaxAbs Scaler-One-Class SVM (SGD).csv  KMeans-2-MaxAbs Scaler-One-Class SVM.csv  KMeans-2-MaxAbs Scaler-Robust Covariance.csv  KMeans-2-Robust Scaler-Isolation Forest.csv  KMeans-2-Robust Scaler-One-Class SVM (SGD).csv  KMeans-3-Power Transformer-Isolation Forest.csv  KMeans-9-Standard Scaler-One-Class SVM.csv  (+18 more)
tests/: test_cbbm.py
(+100 files in other folders)
